@@ -3,6 +3,10 @@
  - Fix for bug 27144: Reload user-sensitive folders if evicted in the meantime
  - Fix for bug 27165: Ensure proper sort field is set
 
+* 2013-06-19 - marcus.klein@open-xchange.com
+
+ - Fix for bug 27065: If reading the replication monitor counter from the slave fails 10 times fall back to master to obtain a connection.
+
 * 2013-06-19 - thorben.betten@open-xchange.com
 
  - Fix for bug 27133: Prefer HTML content on &view=text if associated part's plain-text content is empty or absent
